tidy up of EmbeddingService class