@@ -6,9 +6,9 @@ import uk.gov.moj.cp.ai.client.OpenAIClientFactory;
 import uk.gov.moj.cp.ai.exception.EmbeddingServiceException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.azure.ai.openai.OpenAIClient;
+import com.azure.ai.openai.models.EmbeddingItem;
 import com.azure.ai.openai.models.Embeddings;
 import com.azure.ai.openai.models.EmbeddingsOptions;
 import org.slf4j.Logger;
@@ -16,12 +16,12 @@ import org.slf4j.LoggerFactory;
 
 public class EmbeddingService {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(EmbeddingService.class);
-
     private final OpenAIClient openAIClient;
     private final String embeddingDeploymentName;
 
-    public EmbeddingService(final String endpoint, final String deploymentName) {
+    private static final Logger LOGGER = LoggerFactory.getLogger(EmbeddingService.class);
+
+    public EmbeddingService(String endpoint, String deploymentName) {
 
         validateNullOrEmpty(endpoint, "Endpoint environment variable for embedding service must be set.");
         validateNullOrEmpty(deploymentName, "Deployment name environment variable for embedding service must be set.");
@@ -38,30 +38,11 @@ public class EmbeddingService {
 
     // --- Method to Embed a single user query string ---
     public List<Float> embedStringData(String content) throws EmbeddingServiceException {
-        validateNullOrEmpty(content, "Content to embed cannot be null or empty");
-
-        LOGGER.info("Embedding content string");
-
-        // The EmbeddingsOptions takes a List of strings. For a single query, it's a list with one element.
-        EmbeddingsOptions embeddingsOptions = new EmbeddingsOptions(List.of(content));
-        embeddingsOptions.setUser("cp-ai-document-rag-embedding-service");
-
-        try {
-            Embeddings embeddingsResult = openAIClient.getEmbeddings(embeddingDeploymentName, embeddingsOptions);
-
-            if (embeddingsResult.getData() != null && !embeddingsResult.getData().isEmpty()) {
-                // The API returns a list of embeddings data, one for each input string.
-                // We're expecting only one here for a single query.
-                List<Float> embedding = embeddingsResult.getData().get(0).getEmbedding();
-                LOGGER.info("Successfully embedded query. Obtained dimensions of size : {}", embedding.size());
-                return embedding;
-            } else {
-                LOGGER.warn("No embedding data returned for content string");
-                return List.of();
-            }
-        } catch (Exception e) {
-            throw new EmbeddingServiceException("Failed to embed content", e);
+        final List<List<Float>> embeddings = embedStringDataBatch(List.of(content));
+        if (null == embeddings || embeddings.isEmpty()) {
+            return List.of();
         }
+        return embeddings.get(0);
     }
 
     public List<List<Float>> embedStringDataBatch(List<String> contents) throws EmbeddingServiceException {
@@ -79,12 +60,9 @@ public class EmbeddingService {
 
             if (embeddingsResult.getData() != null && !embeddingsResult.getData().isEmpty()) {
                 List<List<Float>> embeddings = embeddingsResult.getData().stream()
-                        .map(data -> data.getEmbedding().stream()
-                                .map(d -> d.floatValue())
-                                .collect(Collectors.toList()))
-                        .collect(Collectors.toList());
-                LOGGER.info("Successfully embedded {} queries. Obtained embeddings with dimensions of size : {}",
-                        embeddings.size(), embeddings.isEmpty() ? 0 : embeddings.get(0).size());
+                        .map(EmbeddingItem::getEmbedding)
+                        .toList();
+                LOGGER.info("Successfully embedded {} queries", embeddings.size());
                 return embeddings;
             } else {
                 LOGGER.warn("No embedding data returned for batch content");
